--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@ function closeNav() {
 				<h2 style="font-weight: bold;padding-left: 25%;">Web Developer,Java Developer</h2>
 				<button  onclick="contact()" style= "background-color: skyblue;width: auto; margin-left: 25%;"><a style="text-decoration: none;color: black;" href="#">Contact</a> </button>
 				<div id="contact" style="padding-left: 25%;display: none;">
-					<a href="mailto:jay.jk655@gmail.com" target="_blank"><img src="logos/email.png" class="img-rounded img-responsive" style="width: 10%;height: 10%;display: inline-flex;" alt="Email"></a>
-					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/" target="_blank"><img src="logos/lin.png" class="img-rounded img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Linkedin"></a>
-					<a href="https://wa.me/+919065859491" target="_blank"><img src="logos/whats.png" class="img-rounded  img-responsive"style="width: 8%;height: 8%;display: inline-flex;" alt="Whatsapp"></a>
-					<a href="skype:+919065859491?chat" target="_blank"><img src="logos/skype.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Skype"></a>
-					<a href="https://www.instagram.com/ramon_jai/" target="_blank"><img src="logos/inst.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Instagarm"></a>
+					<a href="mailto:jay.jk655@gmail.com" target="_blank"><img src="email.png" class="img-rounded img-responsive" style="width: 10%;height: 10%;display: inline-flex;" alt="Email"></a>
+					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/" target="_blank"><img src="lin.png" class="img-rounded img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Linkedin"></a>
+					<a href="https://wa.me/+919065859491" target="_blank"><img src="whats.png" class="img-rounded  img-responsive"style="width: 8%;height: 8%;display: inline-flex;" alt="Whatsapp"></a>
+					<a href="skype:+919065859491?chat" target="_blank"><img src="skype.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Skype"></a>
+					<a href="https://www.instagram.com/ramon_jai/" target="_blank"><img src="inst.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Instagarm"></a>
 				</div>
 			    </div>
 			</div>
@@ -153,11 +153,11 @@ function closeNav() {
     		<p>Pin Code:- 843329</p>
     	</div>
     	<div class="links" style="margin-left:10%"> 
-    	    <a href="mailto:jay.jk655@gmail.com"><img src="logos/email.png" class="img-rounded img-responsive" style="width: 5%;height: 5%;display: inline-flex;" alt="Email"></a>
-					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/"><img src="logos/lin.png" class="img-rounded img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Linkedin"></a>
-					<a href="https://wa.me/+919065859491" target="_blank"><img src="logos/whats.png" class="img-rounded  img-responsive"style="width: 4%;height: 4%;display: inline-flex;" alt="Whatsapp"></a>
-					<a href="skype:+919065859491?chat"><img src="logos/skype.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Skype"></a>
-					<a href="https://www.instagram.com/ramon_jai/"><img src="logos/inst.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Instagarm"></a>
+    	    <a href="mailto:jay.jk655@gmail.com"><img src="email.png" class="img-rounded img-responsive" style="width: 5%;height: 5%;display: inline-flex;" alt="Email"></a>
+					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/"><img src="lin.png" class="img-rounded img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Linkedin"></a>
+					<a href="https://wa.me/+919065859491" target="_blank"><img src="whats.png" class="img-rounded  img-responsive"style="width: 4%;height: 4%;display: inline-flex;" alt="Whatsapp"></a>
+					<a href="skype:+919065859491?chat"><img src="skype.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Skype"></a>
+					<a href="https://www.instagram.com/ramon_jai/"><img src="inst.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Instagarm"></a>
 				</div>
     </div>
 </div>
