--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function closeNav() {
   <a href="#"onclick="certificates()">Certificates</a>
   <a href="#" onclick="contacts()">Contact</a>
 </div>
-<span style="font-size: 30px;cursor: pointer;color: black;" onmouseover="openNav()" onclick="openNav()">&#9776 Menu</span>
+<span style="font-size: 30px;margin-top:2%;cursor: pointer;color: black;" onmouseover="openNav()" onclick="openNav()">&#9776 Menu</span>
 <div id="main"> 
 	<div id="home" style="display: inline;">
 	<div class=" container-fluid pt-3">
