--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ function closeNav() {
     		<tr><td>Visula Basic</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span></td>
     		<tr><td>HTML</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span></td>
     		<tr><td>CSS</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
-    		<tr><td>JavScript</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
+    		<tr><td>JavaScript</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
     		<tr><td>Python</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span></td>
     		<tr><td>SQL</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
     		<tr><td>Shell Scripting</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
@@ -148,7 +148,6 @@ function closeNav() {
     		<p style="font-size: 28px;color: whitesmoke;"><u><b>Contact</b></u></p>
     		<P>Email:-<a href="mailto:jay.jk655@gmail.com">jay.jk655@gmail.com</a></P>
     		<P>Phone NO:- <a href="http://www.wa.me/+919065859491">+919065859491</a></P>
-    		<p>Web site:-<a href="#">example.com</a></p>
     		<P>Address:- <span>Kothiya Sheohar,Bihar</span></P>
     		<p>Pin Code:- 843329</p>
     	</div>
