--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ function closeNav() {
 <body>
 	<div id="mySidenav" class="sidenav nav ml-auto" onmouseleave="closeNav()">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#" onclick="home()">Home</a>
-  <a href="#" onclick="about()">About Me</a>
-  <a href="#" onclick="academics()">Academics</a>
-  <a href="#" onclick="techskills()">Tech-skills</a>
-  <a href="#" onclick="interskills()">Inter-Skills</a>
-  <a href="#"onclick="certificates()">Certificates</a>
-  <a href="#" onclick="contacts()">Contact</a>
+  <a href="#" onclick="home(),closeNav()">Home</a>
+  <a href="#" onclick="about(), closeNav()">About Me</a>
+  <a href="#" onclick="academics() ,closeNav()">Academics</a>
+  <a href="#" onclick="techskills() ,closeNav()">Tech-skills</a>
+  <a href="#" onclick="interskills() ,closeNav()">Inter-Skills</a>
+  <a href="#"onclick="certificates() ,closeNav()">Certificates</a>
+  <a href="#" onclick="contacts() ,closeNav()">Contact</a>
 </div>
-<span style="font-size: 30px;margin-top:2%;cursor: pointer;color: black;" onmouseover="openNav()" onclick="openNav()">&#9776 Menu</span>
+<span style="font-size: 30px;cursor: pointer;color: black;" onmouseover="openNav()" onclick="openNav()">&#9776 Menu</span>
 <div id="main"> 
 	<div id="home" style="display: inline;">
 	<div class=" container-fluid pt-3">
@@ -52,11 +52,11 @@ function closeNav() {
 				<h2 style="font-weight: bold;padding-left: 25%;">Web Developer,Java Developer</h2>
 				<button  onclick="contact()" style= "background-color: skyblue;width: auto; margin-left: 25%;"><a style="text-decoration: none;color: black;" href="#">Contact</a> </button>
 				<div id="contact" style="padding-left: 25%;display: none;">
-					<a href="mailto:jay.jk655@gmail.com" target="_blank"><img src="email.png" class="img-rounded img-responsive" style="width: 10%;height: 10%;display: inline-flex;" alt="Email"></a>
-					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/" target="_blank"><img src="lin.png" class="img-rounded img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Linkedin"></a>
-					<a href="https://wa.me/+919065859491" target="_blank"><img src="whats.png" class="img-rounded  img-responsive"style="width: 8%;height: 8%;display: inline-flex;" alt="Whatsapp"></a>
-					<a href="skype:+919065859491?chat" target="_blank"><img src="skype.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Skype"></a>
-					<a href="https://www.instagram.com/ramon_jai/" target="_blank"><img src="inst.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Instagarm"></a>
+					<a href="mailto:jay.jk655@gmail.com" target="_blank"><img src="logos/email.png" class="img-rounded img-responsive" style="width: 10%;height: 10%;display: inline-flex;" alt="Email"></a>
+					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/" target="_blank"><img src="logos/lin.png" class="img-rounded img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Linkedin"></a>
+					<a href="https://wa.me/+919065859491" target="_blank"><img src="logos/whats.png" class="img-rounded  img-responsive"style="width: 8%;height: 8%;display: inline-flex;" alt="Whatsapp"></a>
+					<a href="skype:+919065859491?chat" target="_blank"><img src="logos/skype.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Skype"></a>
+					<a href="https://www.instagram.com/ramon_jai/" target="_blank"><img src="logos/inst.png"class="img-rounded  img-responsive" style="width: 8%;height: 8%;display: inline-flex;" alt="Instagarm"></a>
 				</div>
 			    </div>
 			</div>
@@ -70,15 +70,15 @@ function closeNav() {
 		</div>
 	</div>
 </div>
-<div id="about" style="display:none" >
-  <p style="font-size: 30px;margin-left: 10%;margin-right:10% ;margin-top: 8%;color: whitesmoke;"><b><u>About Me</u></b></p>
+<div id="about" style="display:none;" >
+  <h2 style="font-size: 30px;margin-left: 10%;margin-right:5% ;margin-top: 8%;color: whitesmoke;"><b><u>About Me</u></b></h2>
 	<P style="margin-left:10% ;margin-top: 2%;font-size: 24px;font-weight: bold;
-	width: 50%;">A well-organized, creative and goal-oriented graduate possessing well communication, problem-solving and leadership skills with a flair to explore avenues in Computer applications while developing advanced projects with efficiency and quality.Willing to work in a challenging position with a growing organization, where I can utilize my technical and interpersonal skills to serve the organization and enhanced the same.</P>
+	width: 70%;">A well-organized, creative and goal-oriented graduate possessing well communication, problem-solving and leadership skills with a flair to explore avenues in Computer applications while developing advanced projects with efficiency and quality.Willing to work in a challenging position with a growing organization, where I can utilize my technical and interpersonal skills to serve the organization and enhanced the same.</P>
 	</div>
-    <div id="Academics"  style="margin-left:5%;margin-right: 5%;padding-top: 2%;display: none;overflow-wrap: break-word;font-size:24px" >
+    <div id="Academics" class="overflow-auto" style="margin-left:3%;margin-right: 3%;padding-top: 2%;display: none;font-size:24px" >
 				<p style="margin-left: 45%;font-size:24px;color: whitesmoke;"><u><b>Academic Details</b></u></p>
 				<br>
-    	<table class="table table-hover" >
+    	<table class="table table-hover " style="margin-right: 3px;" >
     <thead>
       <tr><th>Sr_no. </th><th>Course</th><th>Board/univerity</th><th>Passing_year</th><th>Percentage</th></tr>
     </thead>
@@ -90,7 +90,7 @@ function closeNav() {
     </tbody>
   </table>
 </div>
-    <div id="techskills" style="margin-left:30%;margin-right:10% ;font-size:24px;display: none;">
+    <div id="techskills"  style="font-size:24px;display: none; width: 70%;margin-left: 10%;">
     	<table class=" table table-hover ">
     		<thead><tr><th>&nbsp</th><th style="color:whitesmoke;"><u><b>Technical skills</b> </u></th><th>&nbsp</th></tr></thead>
     		<tbody>
@@ -100,7 +100,7 @@ function closeNav() {
     		<tr><td>Visula Basic</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span></td>
     		<tr><td>HTML</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span></td>
     		<tr><td>CSS</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
-    		<tr><td>JavaScript</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
+    		<tr><td>JavScript</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
     		<tr><td>Python</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span></td>
     		<tr><td>SQL</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
     		<tr><td>Shell Scripting</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td>
@@ -148,15 +148,16 @@ function closeNav() {
     		<p style="font-size: 28px;color: whitesmoke;"><u><b>Contact</b></u></p>
     		<P>Email:-<a href="mailto:jay.jk655@gmail.com">jay.jk655@gmail.com</a></P>
     		<P>Phone NO:- <a href="http://www.wa.me/+919065859491">+919065859491</a></P>
+    		<p>Web site:-<a href="#">example.com</a></p>
     		<P>Address:- <span>Kothiya Sheohar,Bihar</span></P>
     		<p>Pin Code:- 843329</p>
     	</div>
     	<div class="links" style="margin-left:10%"> 
-    	    <a href="mailto:jay.jk655@gmail.com"><img src="email.png" class="img-rounded img-responsive" style="width: 5%;height: 5%;display: inline-flex;" alt="Email"></a>
-					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/"><img src="lin.png" class="img-rounded img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Linkedin"></a>
-					<a href="https://wa.me/+919065859491" target="_blank"><img src="whats.png" class="img-rounded  img-responsive"style="width: 4%;height: 4%;display: inline-flex;" alt="Whatsapp"></a>
-					<a href="skype:+919065859491?chat"><img src="skype.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Skype"></a>
-					<a href="https://www.instagram.com/ramon_jai/"><img src="inst.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Instagarm"></a>
+    	    <a href="mailto:jay.jk655@gmail.com"><img src="logos/email.png" class="img-rounded img-responsive" style="width: 5%;height: 5%;display: inline-flex;" alt="Email"></a>
+					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/"><img src="logos/lin.png" class="img-rounded img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Linkedin"></a>
+					<a href="https://wa.me/+919065859491" target="_blank"><img src="logos/whats.png" class="img-rounded  img-responsive"style="width: 4%;height: 4%;display: inline-flex;" alt="Whatsapp"></a>
+					<a href="skype:+919065859491?chat"><img src="logos/skype.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Skype"></a>
+					<a href="https://www.instagram.com/ramon_jai/"><img src="logos/inst.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Instagarm"></a>
 				</div>
     </div>
 </div>
