--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ function closeNav() {
       <tr><td>1 </td><td>Matriculation</td><td>Punjab School Education Board</td><td>2015</td><td>77.23</td></tr>
       <tr><td>2 </td><td>Intermediate(PCM)</td><td>Punjab School Education Board</td><td>2017</td><td>61.33</td></tr>
       <tr><td>3 </td><td>BCA Hons.</td><td>Babasaheb Bhimrao Ambedkar Bihar Univerity, Muzaffarpur</td><td>2020</td><td>72.25</td></tr>
-      <tr><td>4 </td><td>MCA</td><td>Chandigarh University</td><td>2023</td><td>Pursuing</td></tr>
+      <tr><td>4 </td><td>MCA</td><td>Chandigarh University</td><td>2023</td><td>8.03</td></tr>
     </tbody>
   </table>
 </div>
