--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function closeNav() {
 				<br>
     	<table class="table table-hover " style="margin-right: 3px;" >
     <thead>
-      <tr><th>Sr_no. </th><th>Course</th><th>Board/univerity</th><th>Passing_year</th><th>Percentage</th></tr>
+      <tr><th>Sr_no. </th><th>Course</th><th>Board/univerity</th><th>Passing_year</th><th>Percentage/CGPA</th></tr>
     </thead>
     <tbody>
       <tr><td>1 </td><td>Matriculation</td><td>Punjab School Education Board</td><td>2015</td><td>77.23</td></tr>
