--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ function closeNav() {
 					<a href="https://www.linkedin.com/in/jai-ram-00940b21b/"><img src="lin.png" class="img-rounded img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Linkedin"></a>
 					<a href="https://wa.me/+919065859491" target="_blank"><img src="whats.png" class="img-rounded  img-responsive"style="width: 4%;height: 4%;display: inline-flex;" alt="Whatsapp"></a>
 					<a href="skype:+919065859491?chat"><img src="skype.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Skype"></a>
-					<a href="https://www.instagram.com/ramon_jai/"><img src="inst.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Instagarm"></a>
+					<a href="https://www.instagram.com/jai_ram_mehta/"><img src="inst.png"class="img-rounded  img-responsive" style="width: 4%;height: 4%;display: inline-flex;" alt="Instagarm"></a>
 				</div>
     </div>
 </div>
