--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ function closeNav() {
     		<p style="font-size: 28px;color: whitesmoke;"><u><b>Contact</b></u></p>
     		<P>Email:-<a href="mailto:jay.jk655@gmail.com">jay.jk655@gmail.com</a></P>
     		<P>Phone NO:- <a href="http://www.wa.me/+919065859491">+919065859491</a></P>
-    		<P>Address:- <span>Kothiya Sheohar,Bihar</span></P>
+    		<P>Address:- <span> Ward no. 1, Kothiya Sheohar,Bihar</span></P>
     		<p>Pin Code:- 843329</p>
     	</div>
     	<div class="links" style="margin-left:10%"> 
