--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ function closeNav() {
     	<table class=" table table-hover ">
     		<thead><tr><th>&nbsp</th><th style="color:whitesmoke;"><u><b>Technical skills</b> </u></th><th>&nbsp</th></tr></thead>
     		<tbody>
+		<tr><td>Ethereum </td><td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td></tr>
     		<tr><td>C</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td></tr>
     		<tr><td>C++</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span><span class="fa fa-star "></span></td></tr>
     		<tr><td>Java</td><td> </td><td><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star checked"></span><span class="fa fa-star "></span></td>
